# Mail-Client

./: README.md
src/: CMakeLists.txt  clang_format_all_files.cmd  count_strings.py  imap_settings.cpp  imap_settings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  send_message_dialog.cpp  send_message_dialog.h  send_message_dialog.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  smtp_settings.cpp  smtp_settings.h  tools.h
